# async_learning

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  vocabulary.md
async_views/async_api/: urls.py  views.py
async_views/async_views/: asgi.py  settings.py  urls.py  wsgi.py
src/: settings.py
src/chapter_1/: listing_1_1.py  listing_1_2.py  listing_1_3.py  listing_1_4.py  listing_1_5.py  listing_1_6.py  listing_1_7.py  listing_1_8.py
src/chapter_10_microservices/: listing_10_10_retry_testing.py  listing_10_11_circuit_breaker.py  listing_10_12_circuit_breaker_testing.py  listing_10_1_stock_service.py  listing_10_2_database_cart.py  listing_10_3_database_favorites.py  listing_10_4_db_pool.py  listing_10_5_favorites_service.py  listing_10_6_cart_service.py  listing_10_7_products_service.py  listing_10_8_backend_for_frontend_service.py  listing_10_9_retry_coroutine.py
src/chapter_11_synchronization/: listing_11_10_events.py  listing_11_11_events_upload_files.py  listing_11_12_events_file_server.py  listing_11_13_fast_events.py  listing_11_14_conditions.py  listing_11_15_conditions_db_connection.py  listing_11_16_optional_rwlock.py  listing_11_1_asyncio_race_condition_fail.py  listing_11_2_asyncio_race_condition_success.py  listing_11_3_race_condition_dict.py  listing_11_4_asyncio_locks.py  listing_11_5_race_condition_dict_with_lock.py  listing_11_6_semaphores.py  listing_11_7_semaphores_requests.py  listing_11_8_semaphores_release_problem.py  listing_11_9_bounded_semaphores.py
src/chapter_12_queues/: listing_12_10_lifo_queue.py  listing_12_11_optional_queue_rwdict.py  listing_12_1_store_queue.py  listing_12_2_queue_methods.py  listing_12_3_queue_in_web_app.py  listing_12_4_queue_in_web_robot.py  listing_12_5_priotiry_queue_with_tuples.py  listing_12_6_priotiry_queue_with_dataclass.py  listing_12_7_priotiry_queue_in_web_app.py  listing_12_8_priotiry_queue_with_same_elements.py  (+1 more)
src/chapter_2/: listing_2_1.py  (+22 more)
(+139 files in other folders)
