[tool.poetry]
name = "async-programming"
version = "0.1.0"
description = "Learning Asyncio and concurrent programming"
authors = ["Mikhail Spiridonov <mspiridonov2706@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "async_programming"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
aiohttp = "^3.8.5"
asyncpg = "^0.28.0"
pydantic-settings = "^2.0.2"
asyncpg-stubs = "^0.28.0"
numpy = "^1.25.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
