[tool.poetry]
name = "async-programming"
version = "0.1.0"
description = "Learning Asyncio and concurrent programming"
authors = ["Mikhail Spiridonov <mspiridonov2706@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
aiohttp = "^3.8.5"
asyncpg = "^0.28.0"
pydantic-settings = "^2.0.2"
asyncpg-stubs = "^0.28.0"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
